# WeAreATeam

./: .dockerignire  .gitignore  Dockerfile  alembic.ini  docker-compose.yml  pyproject.toml
migrations/: env.py
migrations/versions/: 0001_initial_migration.py  0001_initial_schema.py  0001_initial_shcema.py  0002_add_team_products.py  0002_update_models.py  0003_add_team_purchases.py  0004_add_team_balance.py  0005_add_medals.py  0006_update_medals.py  0007_update_users_and_pre_registred.py  0008_add_uesrs.py
src/bot/: __main__.py  config.py  enums.py  factories.py  translate.py
src/bot/dialogs/: buttons.py  dialog_manager.py  flags.py  on_actions.py
src/bot/dialogs/filters/: roles.py
src/bot/filters/: roles.py
src/bot/handlers/: __init__.py  exceptions.py
src/bot/handlers/admin/: __init__.py
src/bot/handlers/admin/broadcast/: dialogs.py  on_actions.py  states.py
src/bot/handlers/admin/logs/: router.py
src/bot/handlers/admin/medal/: router.py
src/bot/handlers/admin/money/: router.py
src/bot/handlers/admin/panel/: dialogs.py  getters.py  on_actions.py  router.py  states.py
src/bot/handlers/admin/secrets/: buttons.py  dialogs.py  getters.py
src/bot/handlers/admin/shop/: buttons.py  dialogs.py  getters.py  router.py
src/bot/handlers/admin/tasks/: buttons.py  dialogs.py  getters.py  router.py
src/bot/handlers/admin/team_shop/: buttons.py  dialogs.py  getters.py  router.py
src/bot/handlers/admin/users/: buttons.py  dialogs.py  getters.py  on_actions.py  router.py
src/bot/handlers/client/: __init__.py  block_bot.py  cancel.py
src/bot/handlers/client/cart/: dialogs.py  getters.py  on_actions.py  router.py  states.py
src/bot/handlers/client/help/: dialogs.py  (+2 more)
src/bot/middlewares/: __init__.py
src/bot/middlewares/outer/: callback_answer.py  delete_message.py  logging.py  throttling.py  user_db_context.py
src/bot/middlewares/request/: retry.py
src/bot/utils/: answer.py  qrcode.py
src/core/: enums.py  exceptions.py  ids.py
src/core/services/: broadcast.py  products.py  purchases.py  qrcode_saver.py  qrcodes.py  roles.py  secrets.py  tasks.py  team_products.py  team_purchases.py  users.py
src/database/: config.py  connection.py
src/database/models/: __init__.py  _mixins.py  base.py  logs.py  pre_registred_users.py  products.py  purchases.py  secret.py  tasks.py  team_products.py  team_purchases.py  users.py  users_to_secrets.py  users_to_tasks.py
src/database/repos/: base.py  logs.py  products.py  purchases.py  secrets.py  tasks.py  team_products.py  team_purchases.py  users.py
src/di/: aiogram.py  container.py  services.py
src/di/database/: repos.py  session.py
src/tools/: enums.py  import_users.py
tools/: enums.py
(+108 files in other folders)
